# ligmars

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: ci.yml  publish-liblgmp.yml  publish-ligmars.yml  publish.yml  test.yml
liblgmp-sys/: Cargo.toml  README.md  build.rs
liblgmp-sys/src/: wrapper.h
ligmars/: Cargo.toml  README.md
ligmars/src/: client.rs  error.rs  host.rs  lib.rs  shm_file.rs
ligmars/tests/: client_basics.rs  single_client_read.rs
ligmars/tests/common/: mod.rs
