[package]
name = "ligmars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liblgmp-sys = { path = "../liblgmp-sys", version = "^0.1.0" }
thiserror = { version = "^1.0.48" }
num_enum = { version = "^0.7.0" }
memmap2 = { version = "^0.8.0" }
