[package]
name = "ligmars"
description = "Safe bindings to the LGMP C library"
version = "0.1.1"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/callummance/ligmars"
categories = ["api-bindings", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["host", "client"]
host = []
client = []
internal_shm_impl = ["dep:memmap2"]

[dependencies]
liblgmp-sys = { path = "../liblgmp-sys", version = "^0.1.0" }
thiserror = { version = "^1.0.48" }
num_enum = { version = "^0.7.0" }
memmap2 = { version = "^0.8.0", optional = true }
shared_memory = "0.12.4"
cfg-if = "1.0.0"
